--- a/portainer/terraform/compose/vaultwarden.yml
+++ b/portainer/terraform/compose/vaultwarden.yml
@@ -7,6 +7,15 @@ services:
     environment:
       ADMIN_TOKEN: ${ADMIN_TOKEN}
       DOMAIN: ${DOMAIN}
+      SMTP_HOST: ${SMTP_HOST}
+      SMTP_PORT: ${SMTP_PORT}
+      SMTP_SECURITY: ${SMTP_SECURITY}
+      SMTP_FROM: ${SMTP_FROM}
+      SMTP_USERNAME: ${SMTP_USERNAME}
+      SMTP_PASSWORD: ${SMTP_PASSWORD}
+      INSTALLATION_ID: ${INSTALLATION_ID}
+      INSTALLATION_KEY: ${INSTALLATION_KEY}
+      YUBICO_SECRET_KEY: ${YUBICO_SECRET_KEY}
       SIGNUPS_ALLOWED: "false"
     volumes:
       - /volume2/docker/vaultwarden/volumes/data:/data:rw
