--- a/portainer/terraform/compose/vaultwarden.yml
+++ b/portainer/terraform/compose/vaultwarden.yml
@@ -15,6 +15,7 @@ services:
       SMTP_PASSWORD: ${SMTP_PASSWORD}
       INSTALLATION_ID: ${INSTALLATION_ID}
       INSTALLATION_KEY: ${INSTALLATION_KEY}
+      YUBICO_CLIENT_ID: ${YUBICO_CLIENT_ID}
       YUBICO_SECRET_KEY: ${YUBICO_SECRET_KEY}
       SIGNUPS_ALLOWED: "false"
     volumes:
