--- a/portainer/terraform/compose/vaultwarden.yml
+++ b/portainer/terraform/compose/vaultwarden.yml
@@ -9,7 +9,7 @@ services:
       DOMAIN: ${DOMAIN}
       SMTP_HOST: ${SMTP_HOST}
       SMTP_PORT: ${SMTP_PORT}
-      SMTP_SECURITY: ${SMTP_SECURITY}
+      SMTP_SECURITY: "off"
       SMTP_FROM: ${SMTP_FROM}
       SMTP_USERNAME: ${SMTP_USERNAME}
       SMTP_PASSWORD: ${SMTP_PASSWORD}
