create prod network

--- a/portainer/terraform/compose/cloudflared_lis_prod.yml
+++ b/portainer/terraform/compose/cloudflared_lis_prod.yml
@@ -7,4 +7,9 @@ services:
     environment:
       TUNNEL_TOKEN: ${TUNNEL_TOKEN}
     command: tunnel run
+    networks:
+      - prod_net
 
+networks:
+  prod_net:
+    external: true
