--- a/.github/workflows/deploy-stacks.yml
+++ b/.github/workflows/deploy-stacks.yml
@@ -15,7 +15,19 @@ on:
         type: string
 
 jobs:
+  wait-for-infrastructure:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Wait for infrastructure deployment
+        uses: lewagon/wait-on-check-action@v1.3.1
+        with:
+          ref: ${{ github.ref }}
+          check-name: 'deploy-infrastructure'
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          wait-interval: 10
+
   detect-changes:
+    needs: wait-for-infrastructure
     runs-on: ubuntu-latest
     outputs:
       services: ${{ steps.detect.outputs.services }}
