--- a/portainer/terraform/compose/cloudflared_lis_prod.yml
+++ b/portainer/terraform/compose/cloudflared_lis_prod.yml
@@ -1,7 +1,7 @@
 
 services:
   cloudflared_lis_prod:
-    image: cloudflare/cloudflared:latest
+    image: cloudflare/cloudflared:2025.5.0
     container_name: cloudflared_lis_prod
     restart: unless-stopped
     environment:
