--- a/.github/workflows/push-secrets.yml
+++ b/.github/workflows/push-secrets.yml
@@ -4,6 +4,7 @@ on:
   push:
     paths:
     - 'secrets/reposecrets.sops.yml'
+  workflow_dispatch:
 
 jobs:
   update-secrets:
@@ -82,6 +83,17 @@ jobs:
         rm decrypted_secrets.yml
         
         echo "🎉 All secrets have been updated successfully!"
+
+    - name: Trigger dependent workflows
+      if: success()
+      env:
+        GH_TOKEN: ${{ secrets.FINE_GRAINED_TOKEN }}
+      run: |
+        # Trigger deploy-cloudflare workflow
+        gh workflow run deploy-cloudflare.yml
+        
+        # Trigger deploy-stacks workflow
+        gh workflow run deploy-stacks.yml
 
     - name: Cleanup
       if: always()
