--- a/portainer/terraform/compose/cloudflared_lis_prod.yml
+++ b/portainer/terraform/compose/cloudflared_lis_prod.yml
@@ -2,7 +2,7 @@
 services:
   cloudflared_lis_prod:
     image: cloudflare/cloudflared:2025.5.0
-    container_name: cloudflared_lis_prod1
+    container_name: cloudflared_lis_prod
     restart: unless-stopped
     environment:
       TUNNEL_TOKEN: ${TUNNEL_TOKEN}
